src/test/ui/proc-macro/proc-macro-gates.stderr
error[E0658]: non-builtin inner attributes are unstable
  --> $DIR/proc-macro-gates.rs:10:5
   |
LL |     #![empty_attr]
   |     ^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54726
   = help: add `#![feature(custom_inner_attributes)]` to the crate attributes to enable

error[E0658]: non-builtin inner attributes are unstable
  --> $DIR/proc-macro-gates.rs:14:5
   |
LL |     #![empty_attr]
   |     ^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54726
   = help: add `#![feature(custom_inner_attributes)]` to the crate attributes to enable

error: key-value macro attributes are not supported
  --> $DIR/proc-macro-gates.rs:17:1
   |
LL | #[empty_attr = "y"]
   | ^^^^^^^^^^^^^^^^^^^

error[E0658]: custom attributes cannot be applied to statements
  --> $DIR/proc-macro-gates.rs:26:5
   |
LL |     #[empty_attr]
   |     ^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add `#![feature(proc_macro_hygiene)]` to the crate attributes to enable

error[E0658]: custom attributes cannot be applied to statements
  --> $DIR/proc-macro-gates.rs:30:5
   |
LL |     #[empty_attr]
   |     ^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add `#![feature(proc_macro_hygiene)]` to the crate attributes to enable

error[E0658]: custom attributes cannot be applied to statements
  --> $DIR/proc-macro-gates.rs:34:5
   |
LL |     #[empty_attr]
   |     ^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add `#![feature(proc_macro_hygiene)]` to the crate attributes to enable

error[E0658]: custom attributes cannot be applied to expressions
  --> $DIR/proc-macro-gates.rs:38:14
   |
LL |     let _x = #[identity_attr] 2;
   |              ^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add `#![feature(proc_macro_hygiene)]` to the crate attributes to enable

error[E0658]: custom attributes cannot be applied to expressions
  --> $DIR/proc-macro-gates.rs:41:15
   |
LL |     let _x = [#[identity_attr] 2];
   |               ^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add `#![feature(proc_macro_hygiene)]` to the crate attributes to enable

error[E0658]: custom attributes cannot be applied to expressions
  --> $DIR/proc-macro-gates.rs:44:14
   |
LL |     let _x = #[identity_attr] println!();
   |              ^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add `#![feature(proc_macro_hygiene)]` to the crate attributes to enable

error[E0658]: procedural macros cannot be expanded to patterns
  --> $DIR/proc-macro-gates.rs:49:12
   |
LL |     if let identity!(Some(_x)) = Some(3) {}
   |            ^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add `#![feature(proc_macro_hygiene)]` to the crate attributes to enable

error[E0658]: procedural macros cannot be expanded to statements
  --> $DIR/proc-macro-gates.rs:52:5
   |
LL |     empty!(struct S;);
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add `#![feature(proc_macro_hygiene)]` to the crate attributes to enable

error[E0658]: procedural macros cannot be expanded to statements
  --> $DIR/proc-macro-gates.rs:53:5
   |
LL |     empty!(let _x = 3;);
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add `#![feature(proc_macro_hygiene)]` to the crate attributes to enable

error[E0658]: procedural macros cannot be expanded to expressions
  --> $DIR/proc-macro-gates.rs:55:14
   |
LL |     let _x = identity!(3);
   |              ^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add `#![feature(proc_macro_hygiene)]` to the crate attributes to enable

error[E0658]: procedural macros cannot be expanded to expressions
  --> $DIR/proc-macro-gates.rs:56:15
   |
LL |     let _x = [empty!(3)];
   |               ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54727
   = help: add `#![feature(proc_macro_hygiene)]` to the crate attributes to enable

error: aborting due to 14 previous errors

For more information about this error, try `rustc --explain E0658`.
